--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -36,7 +36,272 @@ vi:
       enrolling: Đang mở đơn
       my_enroll: Đang/đã đăng kí
       my_following: Đang theo dõi
+  devise:
+    confirmations:
+      confirmed: Xác nhận tài khoản thành công! Bạn hiện đang đăng nhập.
+      new:
+        resend_confirmation_instructions: Gửi lại hướng dẫn xác nhận tài khoản
+      send_instructions: Bạn sẽ nhận được email hướng dẫn xác nhận tài khoản trong vài phút nữa.
+      send_paranoid_instructions: Nếu email của bạn có trong hệ thống, bạn sẽ nhận được email hướng dẫn xác nhận tài khoản trong một vài phút nữa.
+    failure:
+      already_authenticated: Bạn đã đăng nhập.
+      inactive: Tài khoản của bạn chưa được kích hoạt.
+      invalid: Tài khoản hay mật khẩu %{authentication_keys} không hợp lệ
+      last_attempt: Bạn còn một lần thử đăng nhập nữa trước khi tài khoản của bạn bị khóa.
+      locked: Tài khoản của bạn đã bị khóa.
+      not_found_in_database: Tài khoản hay mật khẩu %{authentication_keys} không hợp lệ
+      timeout: Phiên làm việc của bạn đã kết thúc, bạn cần đăng nhập lại để tiếp tục.
+      unauthenticated: Bạn cần phải đăng nhập hoặc đăng ký trước khi tiếp tục.
+      unconfirmed: Bạn cần phải xác nhận tài khoản trước khi tiếp tục.
+    mailer:
+      confirmation_instructions:
+        action: Xác nhận tài khoản
+        greeting: Chào mừng %{recipient}!
+        instruction: 'Bạn có thể xác nhận tài khoản email bằng liên kết dưới đây:'
+        subject: Hướng dẫn xác nhận tài khoản
+      email_changed:
+        greeting: Xin chào %{recipient}!
+        message: Chúng tôi liên hệ với bạn để thông báo cho bạn biết rằng email của bạn đang được thay đổi thành %{email}.
+        subject: Email đã được thay đổi.
+      password_change:
+        greeting: Xin chào %{recipient}!
+        message: 'Chúng tôi thông báo với bạn là mật khẩu của bạn đã được thay đổi. '
+        subject: 'Mật khẩu đã được thay đổi. '
+      reset_password_instructions:
+        action: Thay đổi mật khẩu
+        greeting: Xin chào %{recipient}!
+        instruction: Có ai đó yêu cầu liên kết thay đổi mật khẩu, bạn có thể thay đổi mật khẩu bằng liên kết dưới đây.
+        instruction_2: Nếu bạn không yêu cầu, vui lòng bỏ qua email này.
+        instruction_3: Mật khẩu của bạn sẽ không thay đổi cho đến khi bạn ấn vào liên kết trên và tạo mật khẩu mới.
+        subject: Hướng dẫn thiết lập lại mật khẩu
+      unlock_instructions:
+        action: Mở khoá tài khoản
+        greeting: Xin chào %{recipient}!
+        instruction: 'Hãy nhấn vào liên kết dưới đây để mở khoá tài khoản:'
+        message: Tài khoản của bạn đã bị khoá do vượt quá giới hạn số lần đăng nhập không thành công.
+        subject: Hướng dẫn mở khóa tài khoản
+    omniauth_callbacks:
+      failure: Không thể đăng nhập qua tài khoản %{kind} vì "%{reason}".
+      success: Đăng nhập thành công bằng tài khoản %{kind}.
+    passwords:
+      edit:
+        change_my_password: Thay đổi mật khẩu
+        change_your_password: Thay đổi mật khẩu
+        confirm_new_password: Xác nhận mật khẩu mới
+        new_password: Mật khẩu mới
+      new:
+        forgot_your_password: Quên mật khẩu?
+        send_me_reset_password_instructions: Gửi cho tôi hướng dẫn cài đặt lại mật khẩu
+      no_token: Bạn chỉ có thể truy cập trang này từ email đặt lại mật khẩu. Nếu bạn truy cập từ email đặt lại mật khẩu, xin chắc chắn rằng bạn dùng đường dẫn đầy đủ trong email.
+      send_instructions: Bạn sẽ nhận được email hướng dẫn thiết lập lại mật khẩu trong vài phút nữa.
+      send_paranoid_instructions: Nếu email của bạn có trong hệ thống, bạn sẽ nhận được đường dẫn khôi phục mật khẩu trong vài phút nữa qua email.
+      updated: Đổi mật khẩu thành công! Bạn hiện đang đăng nhập.
+      updated_not_active: Mật khẩu của bạn đã được thay đổi thành công.
+    registrations:
+      destroyed: Tạm biệt! Tài khoản của bạn đã được xóa. Chúng tôi hy vọng sẽ sớm gặp lại bạn.
+      edit:
+        are_you_sure: Bạn có chắc?
+        cancel_my_account: Xoá tài khoản
+        currently_waiting_confirmation_for_email: 'Đang đợi xác nhận tài khoản email: %{email}'
+        leave_blank_if_you_don_t_want_to_change_it: để trống nếu bạn không muốn thay đổi mật khẩu
+        title: Cập nhật %{resource}
+        unhappy: Không hài lòng
+        update: Cập nhật
+        we_need_your_current_password_to_confirm_your_changes: we need your current password to confirm your changes
+      new:
+        sign_up: Đăng ký
+      signed_up: Xin chào! Bạn đã đăng ký thành công.
+      signed_up_but_inactive: Bạn đã đăng ký thành công. Tuy nhiên, bạn cần phải kích hoạt tài khoản trước khi có thể đăng nhập được.
+      signed_up_but_locked: Bạn đã đăng ký thành công. Tuy nhiên tài khoản của bạn đã bị khóa nên không thể đăng nhập được.
+      signed_up_but_unconfirmed: Một email chứa đường dẫn xác nhận tài khoản đã được gửi cho bạn. Bạn vui lòng kiểm tra email.
+      update_needs_confirmation: Tài khoản của bạn được cập nhật thành công, nhưng bạn cần xác nhận địa chỉ email mới. Vui lòng kiểm tra email và nhấn vào đường dẫn xác nhận tài khoản để hoàn tất việc thay đổi địa chỉ email.
+      updated: Cập nhật tài khoản thành công.
+      updated_but_not_signed_in:
+    sessions:
+      already_signed_out: Đăng xuất thành công.
+      new:
+        sign_in: Đăng nhập
+      signed_in: Đăng nhập thành công.
+      signed_out: Đăng xuất thành công.
+    shared:
+      links:
+        back: Trở về
+        didn_t_receive_confirmation_instructions: Không nhận được hướng dẫn xác nhận tài khoản?
+        didn_t_receive_unlock_instructions: Không nhận được hướng dẫn mở khoá tài khoản?
+        forgot_your_password: Quên mật khẩu?
+        sign_in: Đăng nhập
+        sign_in_with_provider: Đăng nhập với %{provider}
+        sign_up: Đăng ký
+      minimum_password_length:
+        one: "(Tối thiểu %{count} ký tự)"
+        other: "(Tối thiểu %{count} ký tự)"
+    unlocks:
+      new:
+        resend_unlock_instructions: Gửi lại hướng dẫn mở khoá tài khoản
+      send_instructions: Bạn sẽ nhận được email hướng dẫn cách mở khóa tài khoản trong vài phút nữa.
+      send_paranoid_instructions: Nếu tài khoản của bạn tồn tại, bạn sẽ nhận được email hướng dẫn cách mở khóa tài khoản trong vài phút nữa.
+      unlocked: Tài khoản của bạn đã được mở khóa thành công. Vui lòng đăng nhập để tiếp tục.
+  errors:
+    messages:
+      already_confirmed: đã được xác nhận, vui lòng đăng nhập để tiếp tục.
+      confirmation_period_expired: cần được xác nhận trong %{period}, xin vui lòng yêu cầu mã mới.
+      expired: đã hết hạn, vui lòng gửi yêu cầu mới.
+      not_found: không tìm thấy
+      not_locked: không bị khóa
+      not_saved:
+        one: '1 lỗi khi lưu %{resource}:'
+        other: "%{count} lỗi khi lưu %{resource}:"
   rails_admin:
     main:
       dashboard:
         access_denied: Bạn không có quyền truy cập vào nội dung này!
+  admin:
+    js:
+      true: True
+      false: False
+      is_present: Is present
+      is_blank: Is blank
+      date: Date ...
+      between_and_: Between ... and ...
+      today: Today
+      yesterday: Yesterday
+      this_week: This week
+      last_week: Last week
+      number: Number ...
+      contains: Contains
+      is_exactly: Is exactly
+      starts_with: Starts with
+      ends_with: Ends with
+      too_many_objects: "Too many objects, use search box above"
+      no_objects: "No objects found"
+    loading: "Loading..."
+    toggle_navigation: Toggle navigation
+    home:
+      name: "Home"
+    pagination:
+      previous: "&laquo; Prev"
+      next: "Next &raquo;"
+      truncate: "…"
+    misc:
+      search: "Search"
+      filter: "Filter"
+      refresh: "Refresh"
+      show_all: "Show all"
+      add_filter: "Add filter"
+      bulk_menu_title: "Selected items"
+      remove: "Remove"
+      add_new: "Add new"
+      chosen: "Chosen %{name}"
+      chose_all: "Choose all"
+      clear_all: "Clear all"
+      up: "Up"
+      down: "Down"
+      navigation: "Navigation"
+      navigation_static_label: "Links"
+      log_out: "Log out"
+      ago: "ago"
+      more: "Plus %{count} more %{models_name}"
+    flash:
+      successful: "%{name} successfully %{action}"
+      error: "%{name} failed to be %{action}"
+      noaction: "No actions were taken"
+      model_not_found: "Model '%{model}' could not be found"
+      object_not_found: "%{model} with id '%{id}' could not be found"
+    table_headers:
+      model_name: "Model name"
+      last_created: "Last created"
+      records: "Records"
+      username: "User"
+      changes: "Changes"
+      created_at: "Date/Time"
+      item: "Item"
+      message: "Message"
+    actions:
+      dashboard:
+        title: "Site Administration"
+        menu: "Dashboard"
+        breadcrumb: "Dashboard"
+      index:
+        title: "List of %{model_label_plural}"
+        menu: "List"
+        breadcrumb: "%{model_label_plural}"
+      show:
+        title: "Details for %{model_label} '%{object_label}'"
+        menu: "Show"
+        breadcrumb: "%{object_label}"
+      show_in_app:
+        menu: "Show in app"
+      new:
+        title: "New %{model_label}"
+        menu: "Add new"
+        breadcrumb: "New"
+        link: "Add a new %{model_label}"
+        done: "created"
+      edit:
+        title: "Edit %{model_label} '%{object_label}'"
+        menu: "Edit"
+        breadcrumb: "Edit"
+        link: "Edit this %{model_label}"
+        done: "updated"
+      delete:
+        title: "Delete %{model_label} '%{object_label}'"
+        menu: "Delete"
+        breadcrumb: "Delete"
+        link: "Delete '%{object_label}'"
+        done: "deleted"
+      bulk_delete:
+        title: "Delete %{model_label_plural}"
+        menu: "Multiple delete"
+        breadcrumb: "Multiple delete"
+        bulk_link: "Delete selected %{model_label_plural}"
+      export:
+        title: "Export %{model_label_plural}"
+        menu: "Export"
+        breadcrumb: "Export"
+        link: "Export found %{model_label_plural}"
+        bulk_link: "Export selected %{model_label_plural}"
+        done: "exported"
+      history_index:
+        title: "History for %{model_label_plural}"
+        menu: "History"
+        breadcrumb: "History"
+      history_show:
+        title: "History for %{model_label} '%{object_label}'"
+        menu: "History"
+        breadcrumb: "History"
+    form:
+      cancel: "Cancel"
+      basic_info: "Basic info"
+      required: "Required"
+      optional: "Optional"
+      one_char: "character"
+      char_length_up_to: "length up to"
+      char_length_of: "length of"
+      save: "Save"
+      save_and_add_another: "Save and add another"
+      save_and_edit: "Save and edit"
+      all_of_the_following_related_items_will_be_deleted: "? The following related items may be deleted or orphaned:"
+      are_you_sure_you_want_to_delete_the_object: "Are you sure you want to delete this %{model_name}"
+      confirmation: "Yes, I'm sure"
+      bulk_delete: "The following objects will be deleted, which may delete or orphan some of their related dependencies:"
+      new_model: "%{name} (new)"
+    export:
+      confirmation: "Export to %{name}"
+      select: "Select fields to export"
+      select_all_fields: "Select All Fields"
+      fields_from: "Fields from %{name}"
+      fields_from_associated: "Fields from associated %{name}"
+      display: "Display %{name}: %{type}"
+      options_for: "Options for %{name}"
+      empty_value_for_associated_objects: "<empty>"
+      click_to_reverse_selection: 'Click to reverse selection'
+      csv:
+        header_for_root_methods: "%{name}"
+        header_for_association_methods: "%{name} [%{association}]"
+        encoding_to: "Encode to"
+        encoding_to_help: "Choose output encoding. Leave empty to let current input encoding untouched: (%{name})"
+        skip_header: "No header"
+        skip_header_help: "Do not output a header (no fields description)"
+        default_col_sep: ","
+        col_sep: "Column separator"
+        col_sep_help: "Leave blank for default ('%{value}')"
