Create user follow event

--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -29,6 +29,8 @@ vi:
       country: Quốc gia
       number_of_participants: Số lượng
       enroll: Đăng kí
+      following: Đang theo dõi
+        follow: Theo dõi
   user_enroll_events:
     show:
       partner: Đối tác
