--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,6 +29,8 @@ en:
       country: Country
       number_of_participants: Number of participants
       enroll: Enroll
+      following: Following
+      follow: Follow
   user_enroll_events:
     show:
       partner: Partner
