--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,8 +28,18 @@ en:
       semester: Semester
       country: Country
       number_of_participants: Number of participants
-      follow: Follow
       enroll: Enroll
+  user_enroll_events:
+    show:
+      partner: Partner
+      major: Major
+      enrolling: Enrolling
+      date: Date
+      country: Country
+      price: Price
+      semester: Semester
+      requirements: Requirements
+      discussions: Discussions
   users:
     sessions:
       new:
