--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -29,8 +29,7 @@ vi:
       country: Quốc gia
       number_of_participants: Số lượng
       enroll: Đăng kí
-      following: Đang theo dõi
-        follow: Theo dõi
+      enrolling: Đang tham gia
   user_enroll_events:
     show:
       partner: Đối tác
