--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -72,6 +72,7 @@ en:
       phone: Phone
       email: Email
       reset_password: Reset password
+      deadline: Deadline
   layouts:
     header:
       search_anything: Search anything
@@ -87,8 +88,8 @@ en:
       latest: Latest
       most_popular: Most popular
       enrolling: Enrolling
-      my_enroll: My enroll
-      my_enrolled: My enrolled
+      participating: Participating
+      completed: Completed
   rails_admin:
     main:
       dashboard:
