add message deleteable

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -81,9 +81,11 @@ en:
       reset_password: Reset password
   messages:
     messages:
-      at: at
       your_message: Your message
       send: Send
+    message:
+      delete: Delete
+      at: at
   searches:
     index:
       partner: Partner
