fix localization and user-event-requirement relationships

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -83,6 +83,8 @@ en:
         update: Update
         back: Back
     show:
+      upload: Upload
+      choose_file: Choose file
       profile: Profile
       name: Name
       gender: Gender
