--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -83,6 +83,8 @@ vi:
         update: Cập nhật
         back: Quay lại
     show:
+      upload: Tải ảnh
+      choose_file: Chọn ảnh
       profile: Trang cá nhân
       name: Tên
       gender: Giới tính
