fix sidebar and scrollbar

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -115,6 +115,7 @@ en:
     sidebar:
       home: Home
       courses: Courses
+    page_submenu:
       latest: Latest
       most_popular: Most popular
       enrolling: Enrolling
