--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -183,3 +183,4 @@ en:
   validate_joined_participants: Joined participants cannot be less than %{number}
   validate_participants: cannot be more than Max participants
   validate_price: Price cannot be less than %{number}
+  validate_deadline: Deadline cannot be after Event's end date
