fix seeds.rb, routes.rb and events thumbnail views

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -177,7 +177,7 @@ en:
     last_page:
       last: Last
   rails_admin:
-    access_denied: You don\'t have permission to access this content!
+    access_denied: You don't have permission to access this content!
   valid_end_date: cannot be before start date
   validate_max_participants: Max participants cannot be less than %{number}
   validate_joined_participants: Joined participants cannot be less than %{number}
