refactor requirements view

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -85,6 +85,12 @@ en:
     image:
       change: Change
       delete: Delete
+    check_requirement:
+      decline: Decline
+      accept: Accept
+    options:
+      unapprove: Từ chối
+      approve: Xác nhận
   users:
     sessions:
       new:
