add ajax and confirmation to participants

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -7,7 +7,12 @@ en:
       stop_sending_enroll_request: Are you sure to stop sending enroll request to this course?
       send_enrolling_request: Are you sure to send enrolling request to this course?
       wait_to_be_approved: You need to wait to be approved by staff!
+      remove_participant: Are you sure to remove this participant from the course?
+      add_participant: Are you sure to add this participant to the course?
+      cannot_be_undo: You cannot undo this action!
     success:
+      add_participant: Add participant successfully!
+      remove_participant: Remove participant successfully!
       stop_sending_enroll_request: Stop sending enroll request successfully!
       send_enrolling_request: Send enrolling request successfully!
       wait_to_be_approved: You now need to wait to be approved. Check "Participating" tab to inbox the staff!
@@ -74,8 +79,8 @@ en:
       requirements: Requirements
       discussions: Discussions
     participant:
-      approve: Approve
-      decline: Decline
+      add: Add
+      remove: Remove
     requirement:
       upload: Upload
       choose_file: Choose file
