--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -7,7 +7,12 @@ vi:
       stop_sending_enroll_request: Bạn có chắc chắn muốn huỷ gửi yêu cầu tham gia khoá học này?
       send_enrolling_request: Bạn có chắc chắn muốn gửi yêu cầu tham gia khoá học này?
       wait_to_be_approved: Bạn cần phải chờ để được chấp thuận bởi cán bộ phòng IC
+      remove_participant: Bạn có chắc muốn xoá người này khỏi khoá học?
+      add_participant: Bạn có chắc muốn thêm người này vào khoá học?
+      cannot_be_undo: Hành động này không thể hoàn tác!
     success:
+      add_participant: Thêm vào khoá học thành công!
+      remove_participant: Xoá khỏi khoá học thành công!
       stop_sending_enroll_request: Huỷ gửi yêu cầu tham gia khoá học thành công!
       send_enrolling_request: Gửi yêu cầu tham gia khoá học thành công!
       wait_to_be_approved: Giờ bạn phải chờ để được cán bộ phòng IC chấp thuận. Bạn có thể vào mục "Đang tham gia" để nhắn tin với cán bộ phụ trách!
@@ -74,8 +79,8 @@ vi:
       requirements: Các yêu cầu
       discussions: Thảo luận
     participant:
-      approve: Chấp thuận
-      decline: Từ chối
+      add: Thêm
+      remove: Xoá
     requirement:
       upload: Gửi ảnh
       choose_file: Chọn ảnh
